# Subscription-Entitlements-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/membership_perks_engine/: membership.py
tests/: test_membership_base.py  test_membership_freezegun.py  test_membership_mocked.py
